batpak/tests/ui/forge_receipt.stderr
error[E0624]: associated function `new` is private
 --> tests/ui/forge_receipt.rs:7:51
  |
7 |     let _receipt = batpak::guard::Receipt::<i32>::new(42, vec!["fake_gate"]);
  |                                                   ^^^ private associated function
  |
 ::: src/guard/receipt.rs
  |
  |     pub(crate) fn new(payload: T, gates_passed: Vec<&'static str>) -> Self {
  |     ---------------------------------------------------------------------- private associated function defined here
